fixing vertical alignment of home items for #53

--- a/_site_generated/assets/css/all.css
+++ b/_site_generated/assets/css/all.css
@@ -8050,6 +8050,9 @@ p.results-summary strong {
 .animate-leave {
   opacity: 1;
 }
+.packery-container .span4 {
+  width: 380px;
+}
 .packery-container {
   padding-left: 30px;
 }
@@ -8057,21 +8060,23 @@ p.results-summary strong {
   .packery-container {
     padding-left: 20px;
   }
+  .packery-container .span4 {
+    width: 305px;
+  }
 }
 @media (max-width: 979px) {
+  .packery-container .span4 {
+    width: 233px;
+  }
+  /*.packery-container .home-item.home-item-physical {
+      height: 166px;
+    }*/
   .packery-container {
     padding-left: 20px;
   }
   a.filter-group-toggle {
     font-size: 18px;
   }
-}
-@media (max-width: 767px) {
-  .packery-container {
-    padding-left: 0px;
-  }
-}
-@media (max-width: 979px) {
   .home-item.w1 {
     width: 100%;
   }
@@ -8103,6 +8108,12 @@ p.results-summary strong {
 @media (max-width: 767px) {
   body {
     font-size: 12px;
+  }
+  .packery-container {
+    padding-left: 0px;
+  }
+  .packery-container .span4 {
+    width: 100%;
   }
   .home-item-cntr.welcome p.big {
     font-size: 18px;
